--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,33 +1,6 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/alpine
 {
-	"name": "Alpine",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:3.12",
-	"features": {
-		"ghcr.io/hspaans/devcontainer-features/ansible-lint:2": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers-extra/features/ansible:2": {
-			"version": "latest",
-			"injections": "hcloud"
-		}
-	},
-  "extensions": [
-	"redhat.ansible"      // ← extension officielle Ansible
-  ]
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+  "name": "Alpine (python)",
+  "image": "mcr.microsoft.com/devcontainers/python:3.12",
+  "extensions": ["redhat.ansible"],
+  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y ansible && pipx install ansible-lint || pip install --user ansible-lint"
 }
